--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "d3-geo": "^3.1.1",
     "jotai": "^2.8.2",
     "jotai-optics": "^0.4.0",
+    "optics-ts": "^2.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
